# parra-cli

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  package-lock.json  package.json  release_update.sh
src/: api.rs  arg_parser.rs  auth.rs  auth_server.rs  dependencies.rs  main.rs  project_generator.rs  types.rs
src/commands/: bootstrap.rs
src/project_generator/: generator.rs  templates.rs
src/templates/: App.swift.liquid  configs.yaml
src/types/: api.rs  auth.rs  mod.rs  project.rs
