[package]
name = "parra-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
open = "5.1.2"
rouille = "3.6.2"
semver = "1.0.22"
url = "2.5.0"
