[package]
name = "parra-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
keyring = "2.3.2"
open = "5.1.2"
reqwest = { version = "0.12.2", features = ["blocking", "json", "multipart"] }
rouille = "3.6.2"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

url = "2.5.0"
